# itsagas

./: README.md  pyproject.toml
src/itsagas/: main.py
